function update article
